editor: Added new command to add next word or substring to the caret set - fixes #1131
rn=

(integrated from master branch change 9.2.1-1746-g015a0d1 by Mitchell <mitchellb@activestate.com>)

--- a/src/chrome/komodo/locale/en-US/komodo.dtd
+++ b/src/chrome/komodo/locale/en-US/komodo.dtd
@@ -43,7 +43,9 @@
 <!ENTITY aboutName.accesskey "A">
 <!ENTITY add.label "Add">
 <!ENTITY addNextWordToCaretSet.label "Multiple Selection - Add Next Occurrence">
+<!ENTITY addNextSubstringToCaretSet.label "Multiple Selection - Add Next Word or Substring Occurrence">
 <!ENTITY addNextWordToCaretSet.desc "Editor: Add Next Word to a Multi-Caret Set">
+<!ENTITY addNextSubstringToCaretSet.desc "Editor: Add Next Word or Substring to a Multi-Caret Set">
 <!ENTITY addAsSnippetInToolbox.label "Add as Snippet into Toolbox">
 <!ENTITY browseForDirectoriesToAddToSearchList.tooltiptext "Browse for directories to add to search list">
 <!ENTITY browserPreview.menu.accesskey "B">
