Find: You can now choose to have find results open in file tabs (instead of bottom panel)
rn=

(integrated from master branch change 9.2.1-1773-g588557c by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/locale/en-US/pref/pref.dtd
+++ b/src/chrome/komodo/locale/en-US/pref/pref.dtd
@@ -650,6 +650,7 @@ adding an additional caret at the clicked position.">
 <!ENTITY find.label "Find">
 <!ENTITY findFrame.label "Find Frame">
 <!ENTITY pinFindFrame.label "Never auto-close the find frame">
+<!ENTITY findInView.label "Open find results as file tabs">
 <!ENTITY findInFiles.label "Find in Files">
 <!ENTITY findHighlighting.label "Highlighting">
 <!ENTITY findHighlightEnabled.label "Enable highlighting of find and replace results">
