editor: Added "wrap selection with multiple carets" command - fixes #1780
rn=

(integrated from master branch change 9.2.1-1776-gf444f09 by Mitchell <mitchellb@activestate.com>)

--- a/src/chrome/komodo/locale/en-US/komodo.dtd
+++ b/src/chrome/komodo/locale/en-US/komodo.dtd
@@ -832,6 +832,7 @@
 <!ENTITY wordWrap.label "Word Wrap">
 <!ENTITY workspace.label "Workspace">
 <!ENTITY workspaceToolbar.tooltiptext "Workspace Toolbar">
+<!ENTITY wrapSelectionWithCarets.desc "Editor: Wrap Selection With Multiple Carets">
 
 <!ENTITY helpForLanguages.label "Help for Languages">
 <!ENTITY helpLanguagesMenu.accesskey "L">
