--- a/src/chrome/komodo/locale/en-US/pref/pref-syntax-checking.dtd
+++ b/src/chrome/komodo/locale/en-US/pref/pref-syntax-checking.dtd
@@ -4,5 +4,5 @@ License, v. 2.0. If a copy of the MPL was not distributed with this
 file, You can obtain one at http://mozilla.org/MPL/2.0/.
  ***** END LICENSE BLOCK ***** -->
 
-<!ENTITY lintCSSWithKomodoParser.checkbox.label "Use SASS for CSS checking (must be installed on your PATH)">
+<!ENTITY lintCSSWithKomodoParser.checkbox.label "Komodo CSS checker">
 <!ENTITY lintCSSWithMozillaParser.checkbox.label "Mozilla CSS checker">
