UI: You can now change font face/size/spacing globally in appearance preferences
rn=

(integrated from the KomodoIDE master branch change 374bc7c by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/374bc7c

--- a/src/chrome/komodo/locale/en-US/pref/pref.dtd
+++ b/src/chrome/komodo/locale/en-US/pref/pref.dtd
@@ -768,6 +768,8 @@ adding an additional caret at the clicked position.">
 <!ENTITY uiPaneVerticalTabs.menuitem.label "Vertical tabs">
 <!ENTITY uiPaneIconTabs.menuitem.label "Icons in tabs">
 <!ENTITY interface.caption "Interface">
+<!ENTITY fonts.caption "Fonts">
+<!ENTITY colorscheme.caption "Color Scheme">
 <!ENTITY useGtkDetection.label "Auto detect skin">
 <!ENTITY skin.label "Skin: ">
 <!ENTITY skin.tooltip "Select what UI skin Komodo should use. Note that 'compatibility' skins serve to offer compatibility with existing OS themes, they are not full skins.">
