editor: Added preference for minimum characters shown after caret - fixes #224
rn=

(integrated from the KomodoIDE master branch change 032883e by Mitchell <mitchellb@activestate.com>)

https://github.com/Komodo/KomodoIDE/commit/032883e

--- a/src/chrome/komodo/locale/en-US/pref/pref.dtd
+++ b/src/chrome/komodo/locale/en-US/pref/pref.dtd
@@ -622,6 +622,7 @@ adding an additional caret at the clicked position.">
 <!ENTITY fileChanged.label "If files have been changed:">
 <!ENTITY fileDeleted.label "If files have been deleted:">
 <!ENTITY minimumNumberLineAboveBelowCursor.label "Minimum number of lines to keep above and below cursor:">
+<!ENTITY minimumNumberColumnAfterCursor.label "Minimum number of columns to keep after cursor:">
 <!ENTITY horizScrollWidth.label "Minimum horizontal scrollbar width (in pixels):">
 <!ENTITY horizScrollWidthTracking.label "Automatically adjust the horizontal scrollbar width">
 <!ENTITY horizScrollWidthTracking.tooltiptext "When enabled, this will automatically adjust the horizontal scrollbar width to fit the document width. Note: Enabling this feature can decrease the editor performance.">
