editor: Allow editing of matching delimiters on select - fixes #1115
rn=

(integrated from the KomodoIDE master branch change 22f1f4c by Mitchell <mitchellb@activestate.com>)

https://github.com/Komodo/KomodoIDE/commit/22f1f4c

--- a/src/chrome/komodo/locale/en-US/pref/pref.dtd
+++ b/src/chrome/komodo/locale/en-US/pref/pref.dtd
@@ -606,6 +606,7 @@ adding an additional caret at the clicked position.">
 
 <!--pref-editsmart.xul-->
 <!ENTITY msecs.label "msecs">
+<!ENTITY editMatchingDelimiter.label "Edit matching delimiter on select">
 <!ENTITY fileEditSmartWrapLines.label "Wrap long lines by:">
 <!ENTITY fileEditSmartWrapIndentation.label "Wrap indentation:">
 <!ENTITY fileEditSmartWrapMarkers.label "Wrap markers:">
