Locale: dedent -> unindent; fixed #991
Signed-off-by: Defman21 <i@defman.me>

--- a/src/chrome/komodo/locale/en-US/keybindings/keybindings.dtd
+++ b/src/chrome/komodo/locale/en-US/keybindings/keybindings.dtd
@@ -122,7 +122,7 @@
 <!ENTITY editorViSelectToTopOfDocument.desc "Editor: Vi: Select to Top of Document">
 <!ENTITY editorViSetRegister.desc "Editor: Vi: Set Register">
 <!ENTITY editorViStartChangeTextOperation.desc "Editor: Vi: Start Change Text Operation">
-<!ENTITY editorViStartDedentTextOperation.desc "Editor: Vi: Start Dedent Text Operation">
+<!ENTITY editorViStartDedentTextOperation.desc "Editor: Vi: Start Unindent Text Operation">
 <!ENTITY editorViStartDeleteTextOperation.desc "Editor: Vi: Start Delete Text Operation">
 <!ENTITY editorViStartIndentTextOperation.desc "Editor: Vi: Start Indent Text Operation">
 <!ENTITY editorViStartYankTextOperation.desc "Editor: Vi: Start Yank Text Operation">
