--- a/src/chrome/komodo/locale/en-US/komodo.dtd
+++ b/src/chrome/komodo/locale/en-US/komodo.dtd
@@ -100,7 +100,7 @@
 <!ENTITY cutButton.accesskey "T">
 <!ENTITY decreaseFont.accesskey "D">
 <!ENTITY decreaseFont.label "Decrease Font Size">
-<!ENTITY decreaseLineIndent.label "Dedent">
+<!ENTITY decreaseLineIndent.label "Unindent">
 <!ENTITY delete.label "Delete">
 <!ENTITY deleteBlankLines.desc "Editor: Delete Blank Lines">
 <!ENTITY edit.label "Edit">
