Interpolation: Add current line text shortcut rn=
(integrated from the KomodoIDE master branch change cf3cdb2 by Carey Hoffman <careyh@activestate.com>)

https://github.com/Komodo/KomodoIDE/commit/cf3cdb2

--- a/src/chrome/komodo/locale/en-US/project.dtd
+++ b/src/chrome/komodo/locale/en-US/project.dtd
@@ -37,6 +37,7 @@
 <!ENTITY DDirectoryPathOfFile.label "[[&#37;D]]: directory path of file">
 <!ENTITY FFilePath.label "[[&#37;F]]: file path">
 <!ENTITY LCurrentLineNumber.label "[[&#37;L]]: current line number">
+<!ENTITY LCurrentLineText.label "[[&#37;l]]: current line text">
 <!ENTITY PPathOfTheActiveProject.label "[[&#37;P]]: path of the active project file">
 <!ENTITY SURLEscapedSelection.label "[[&#37;S]]: URL-escaped selection">
 <!ENTITY WURLEscapedSelectionOrWordUnderCursor.label "[[&#37;W]]: URL-escaped selection or word under cursor">
