toolbox: Clean up context menu
(integrated from the KomodoIDE 10.2.0 branch change e9c482d by Carey Hoffman <cgchoffman@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/e9c482d

--- a/src/chrome/komodo/locale/en-US/komodo.dtd
+++ b/src/chrome/komodo/locale/en-US/komodo.dtd
@@ -404,7 +404,7 @@
 <!ENTITY helpTroubleshootingViewErrorLog.desc "Help: Open the Komodo Error Log for viewing">
 <!ENTITY helpTroubleshootingAboutMemory.accesskey "M">
 <!ENTITY helpTroubleshootingAboutMemory.label "Memory Usage">
-<!ENTITY importExport.label "Import/Export">
+<!ENTITY import.label "Import">
 <!ENTITY importPackage.label "Import Package...">
 <!ENTITY increaseFont.accesskey "I">
 <!ENTITY increaseFont.label "Increase Font Size">
