Toolbox: Upgrade: Snippets trigger on language property rn=
(integrated from the KomodoIDE master branch change 34ca9df by Carey Hoffman <cgchoffman@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/34ca9df

--- a/src/chrome/komodo/locale/en-US/project.dtd
+++ b/src/chrome/komodo/locale/en-US/project.dtd
@@ -49,6 +49,7 @@
 <!ENTITY askpassAskForPassword.label "[[&#37;askpass]]: ask for password">
 <!ENTITY async.accesskey "b">
 <!ENTITY AutoAbbreviation.label "Auto-Abbreviation">
+<!ENTITY AutoAbbreviationLanguage.label "Language">
 <!ENTITY bFileBaseNameWithoutExtension.label "[[&#37;b]]: file base name without extension">
 <!ENTITY beforeFileCloseTheMacroCanReturnTrueToPreventFileClose.label "Before file close (the userscript can return true to prevent file close)">
 <!ENTITY beforeFileSaveTheMacroCanReturnTrueToPreventFileSave.label "Before file save (the userscript can return true to prevent file save)">
