Editor: Ask open/import when dropping Komodo Tool on editor.

--- a/src/chrome/komodo/locale/en-US/views.properties
+++ b/src/chrome/komodo/locale/en-US/views.properties
@@ -52,6 +52,8 @@ Overwrite.customButtonLabel=&Overwrite
 ChooseDifferentName.customButtonLabel=Choose a &Different Name
 importFileAsScheme.prompt=Import "%S" Color Scheme into Komodo?
 openingSchemeFile.label=Opening a Komodo KSF Scheme File...
+importFileAsKomodoTool.prompt=Import Komodo Tool into Komodo?
+openingKomodoToolFile.label=Opening a Komodo Tool File...
 schemeNameHasInvalidCharacters.template=The proposed scheme name '%S' may contain only letters, digits, spaces, and characters in "-_,.+=@#$\%". Please choose another name.
 schemeExists.template=There already is a scheme named '%S'. Please choose another.
 cantFindSchemeFile.template=Can't find file "%S"
