Toolbox: all new tools now use the clean (ktf) format
(integrated from the KomodoIDE master branch change a473cfc935 by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/a473cfc935

--- a/src/chrome/komodo/locale/en-US/komodo.dtd
+++ b/src/chrome/komodo/locale/en-US/komodo.dtd
@@ -106,6 +106,7 @@
 <!ENTITY edit.label "Edit">
 <!ENTITY editMacro.label "Edit Userscript">
 <!ENTITY editSnippet.label "Edit Snippet">
+<!ENTITY editRaw.label "Edit Tool (advanced)">
 <!ENTITY editorInvokeHyperlink.desc "Editor: Invoke Hyperlink">
 <!ENTITY editorAddAsSnippetToToolbox.desc "Editor: Add as Snippet into Toolbox">
 <!ENTITY editorBack.desc "Editor: Back">
