--- a/src/chrome/komodo/locale/en-US/views.properties
+++ b/src/chrome/komodo/locale/en-US/views.properties
@@ -73,3 +73,5 @@ newFileHasLongLines.prompt=Large file encountered
 newFileAddedAsText.template=The file %S could cause performance problems when viewed as language %S, and is being treated as a plain text file instead.  Possible reasons include large file size, long line lengths, and/or too many lines.
 OK.prompt=OK
 no more instances of x=No more instances of %S in the current document
+savingTemplate=Saving New Template ..
+enterNameForNewTemplate=Enter name for new template
