--- a/src/modules/places/locale/en-US/places.dtd
+++ b/src/modules/places/locale/en-US/places.dtd
@@ -50,6 +50,8 @@
 <!ENTITY newGroupPlace.label "New Group...">
 <!ENTITY newGroupPlace.accesskey "G">
 <!ENTITY placesNewFileFromTemplate.label "New File From Template...">
+<!ENTITY placesNewFolderFromTemplate.label "New Folder From Template...">
+<!ENTITY placesNewTemplateFromFolder.label "New Template from Folder...">
 
 <!ENTITY loadPlace.label "Open Directory...">
 <!ENTITY loadRemotePlace.label "Open Remote Directory...">
