Interpolation: Added currentLineOrSelEscaped
(integrated from the KomodoIDE master branch change b235dbef7b by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/b235dbef7b

--- a/src/chrome/komodo/locale/en-US/run/run.dtd
+++ b/src/chrome/komodo/locale/en-US/run/run.dtd
@@ -38,6 +38,7 @@
 <!ENTITY FFilePath.label "&#37;F : file path">
 <!ENTITY LCurrentLineNumber.label "&#37;L : current line number">
 <!ENTITY LCurrentLineText.label "&#37;l : current line text">
+<!ENTITY currentLineOrSelEscaped.label "[[&#37;t]] : text under selection or current line, escaped and shortened">
 <!ENTITY PPathOfTheActiveProject.label "&#37;P : path of the active project file">
 <!ENTITY SURLEscapedSelection.label "&#37;S : URL-escaped selection">
 <!ENTITY WURLEscapedSelectionOrWordUnderCursor.label "&#37;W : URL-escaped selection or word under cursor">
