Packages: You can now enable/disable addons (including system addons)
rn=

(integrated from the KomodoIDE master branch change 8be1022dd4 by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/8be1022dd4

--- a/src/modules/scope_packages/locale/en-US/scope-packages.properties
+++ b/src/modules/scope_packages/locale/en-US/scope-packages.properties
@@ -7,7 +7,8 @@ restartKomodoAfterLangInstall.prompt=Language "%S" installed. Komodo should be r
 skinInstalledOpenPrefs.prompt=Skin "%S" installed, would you like to open your appearance preferences now?
 restartNow.label=Restart Now
 restartLater.label=Restart Later
-restartKomodoAfterUninstall.prompt=Uninstallation of this package requires Komodo to be restarted. Proceed?
+restartKomodoAfterUninstall.prompt=Uninstallation of this package requires Komodo to be restarted. Restart now?
+restartKomodoAfterToggle.prompt=Komodo has to be restarted for the action to be completed. Restart now?
 applyScheme.prompt=Would you like to apply this color scheme now?
 applySchemeNow.label=Yes
 applySchemeLater.label=No
