Locale: fixed #2528 (Jump to => Go to)
Signed-off-by: Defman21 <i@defman.me>

--- a/src/chrome/komodo/locale/en-US/keybindings/keybindings.dtd
+++ b/src/chrome/komodo/locale/en-US/keybindings/keybindings.dtd
@@ -92,8 +92,8 @@
 <!ENTITY editorViMoveToTheEndOfTheSection.desc "Editor: Vi: Move to the End of the Section">
 <!ENTITY editorViMoveToTheEndOfTheSentence.desc "Editor: Vi: Move to the End of the Sentence">
 <!ENTITY editorViMoveToTheTopOfTheScreen.desc "Editor: Vi: Move to the Top of the Screen">
-<!ENTITY editorViJumpToLineBeforeLastJump.desc "Editor: Vi: Jump to the Line before the Last Jump">
-<!ENTITY editorViJumpToLocBeforeLastJump.desc "Editor: Vi: Jump to the Position before the Last Jump">
+<!ENTITY editorViJumpToLineBeforeLastJump.desc "Editor: Vi: Go to the Line before the Last Go">
+<!ENTITY editorViJumpToLocBeforeLastJump.desc "Editor: Vi: Go to the Position before the Last Go">
 <!ENTITY editorViNewLineStartingAfterTheCurrentLine.desc "Editor: Vi: New Line Starting After the Current Line">
 <!ENTITY editorViNewLineStartingBeforeTheCurrentLine.desc "Editor: Vi: New Line Starting Before the Current Line">
 <!ENTITY editorViPaste.desc "Editor: Vi: Paste">
@@ -144,7 +144,7 @@
 <!ENTITY ready.label "Ready">
 <!ENTITY sourceCodeViDecreaseLineIndent.desc "Source Code: Vi: Decrease Line Indent">
 <!ENTITY sourceCodeViIncreaseLineIndent.desc "Source Code: Vi: Increase Line Indent">
-<!ENTITY sourceCodeViJumpToMatchingBrace.desc "Source Code: Vi: Jump to Matching Brace">
+<!ENTITY sourceCodeViJumpToMatchingBrace.desc "Source Code: Vi: Go to Matching Brace">
 <!ENTITY viEmulationMode.tooltiptext "Vi emulation mode">
 
 <!--keybindings.xml-->
