--- a/src/chrome/komodo/locale/en-US/bindings.dtd
+++ b/src/chrome/komodo/locale/en-US/bindings.dtd
@@ -47,8 +47,8 @@
 <!ENTITY doubleClickToChangeOrientation.tooltiptext "Double-click to change orientation">
 <!ENTITY filterItems.tooltiptext "Filter Items">
 <!ENTITY forward.tooltiptext "Forward">
-<!ENTITY jumpToNextDiff.tooltiptext "Jump to Next Diff">
-<!ENTITY jumpToPreviousDiff.tooltiptext "Jump to Previous Diff">
+<!ENTITY jumpToNextDiff.tooltiptext "Go to Next Diff">
+<!ENTITY jumpToPreviousDiff.tooltiptext "Go to Previous Diff">
 <!ENTITY listAllSidebars.tooltiptext "List all sidebars">
 <!ENTITY listAllTabs.tooltiptext "List all tabs">
 <!ENTITY mapsTo.label "Maps to">
