Remote File: don't hang when return focus to Komodo. Fixes #70 rn= This only implements background status checking.
(integrated from the KomodoIDE master branch change 9ecd85e by Carey Hoffman <cgchoffman@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/9ecd85e

--- a/src/chrome/komodo/locale/en-US/views.properties
+++ b/src/chrome/komodo/locale/en-US/views.properties
@@ -75,3 +75,11 @@ OK.prompt=OK
 no more instances of x=No more instances of %S in the current document
 savingTemplate=Saving New Template ..
 enterNameForNewTemplate=Enter name for new template
+closeDeletedRemoteFiles.prompt=Close Deleted Remote Files
+reloadChangedRemoteFiles.prompt=Reload Changed Remote Files
+someOpenRemoteFilesHaveChanged.prompt=Some open remote files have changed on the server, do you want to reload them?
+theFollowingRemoteFilesDeleted.prompt=The following open remote files have been deleted from the server.  Do you want to close them?
+theFollowingRemoteFilesHaveChangedOnDisk.prompt=The following remote files have changed on the server and have unsaved changes in Komodo.  You can use "Show Unsaved Changes" to view a diff of the files, revert or save your changes.
+connectionIssues.prompt=The following files have connection issues and couldn't update their status.  Please check your connect.
+connectionIssues.title=File Connection Issues
+modifiedRemoteFilesHaveChangedOnDisk.prompt=Modified Remote Files Have Changed On Server
