Prefs: Locale for primary language change
(integrated from the KomodoIDE master branch change 3ab9c46b68 by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/3ab9c46b68

--- a/src/chrome/komodo/locale/en-US/pref/pref.dtd
+++ b/src/chrome/komodo/locale/en-US/pref/pref.dtd
@@ -487,6 +487,7 @@ adding an additional caret at the clicked position.">
 <!ENTITY xslXSLT.label ".xsl: XSLT">
 <!ENTITY xsltXSLT.label ".xslt: XSLT">
 <!ENTITY yYearWithoutCentury0099.label "&#37;y : year without century [00,99]">
+<!ENTITY primaryLanguage.label "Primary Language:">
 
 <!--editenvironvar.xul-->
 <!ENTITY AddEditEnvir.label "Add/Edit Environment Variable">
