Prefs: Remove jshint version information from UI - fixes #2799
(integrated from the KomodoIDE master branch change c0d18cb2a9 by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/c0d18cb2a9

--- a/src/chrome/komodo/locale/en-US/pref/pref.dtd
+++ b/src/chrome/komodo/locale/en-US/pref/pref.dtd
@@ -727,7 +727,7 @@ adding an additional caret at the clicked position.">
 <!ENTITY lintJSHint_Explanation.descr "Use a format like bitwise=false debug=true esnext=true maxerr=5 predef=['document','window']">
 <!ENTITY lintJSHint_WebSiteLabel.label "See all allowed options at: ">
 <!ENTITY chooseACustomOrUpdatedJshint.js.label "Choose a custom or updated jshint.js">
-<!ENTITY defaultJshintLinter.label "Default linter (version 2.6.3)">
+<!ENTITY defaultJshintLinter.label "Default linter">
 <!ENTITY customJshintLinter.label "Custom linter">
 <!ENTITY separateNamesWithCommas.tooltip "Separate names with commas and/or spaces.">
 
