UX: Label change as suggested - fixes #2926
(integrated from the KomodoIDE master branch change 7409c35a31 by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/7409c35a31

--- a/src/modules/places/locale/en-US/places.dtd
+++ b/src/modules/places/locale/en-US/places.dtd
@@ -50,7 +50,7 @@
 <!ENTITY newGroupPlace.label "New Group...">
 <!ENTITY newGroupPlace.accesskey "G">
 <!ENTITY placesNewFileFromTemplate.label "New File From Template...">
-<!ENTITY placesNewFolderFromTemplate.label "New Folder From Template...">
+<!ENTITY placesNewFolderFromTemplate.label "New Folder From this Template...">
 <!ENTITY placesNewTemplateFromFolder.label "New Template from Folder...">
 
 <!ENTITY loadPlace.label "Open Directory...">
