Added 'Close All' action in tab context menus; fixed #1817
Signed-off-by: Defman21 <i@defman.me>

--- a/src/chrome/komodo/locale/en-US/komodo.dtd
+++ b/src/chrome/komodo/locale/en-US/komodo.dtd
@@ -931,4 +931,5 @@
 <!ENTITY contributePackages.label "Contribute Packages">
 <!ENTITY shareTool.label "Share this Tool">
 
-
+<!ENTITY menuCloseAll.label "Close All">
+<!ENTITY menuCloseAll.accesskey "A">
