--- a/src/chrome/komodo/locale/en-US/komodo.dtd
+++ b/src/chrome/komodo/locale/en-US/komodo.dtd
@@ -931,4 +931,4 @@
 <!ENTITY contributePackages.label "Contribute Packages">
 <!ENTITY shareTool.label "Share this Tool">
 
-<!ENTITY tabAwarePaste.label "Tab-Aware Paste">
+<!ENTITY tabAwarePaste.label "Paste (Preserve Indentation)">
