Places: More feedback when file already exists on New File.
(integrated from the KomodoIDE master branch change 5a63e41 by Carey Hoffman <cgchoffman@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/5a63e41

--- a/src/modules/places/locale/en-US/places.properties
+++ b/src/modules/places/locale/en-US/places.properties
@@ -34,6 +34,7 @@ doesNotExist='%S' does not exist.
 isNotADirectory='%S' is not a directory.
 cantFindPath.prompt=Can't find the path '%S'.
 enterFileName=Enter file name:
+enterFileNameAlreadyExists=File exists.  Enter new file name:
 enterFolderName=Enter folder name:
 
 noPartsFound=<no parts found>
